<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java Book</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nasa">0g</string>
    <string name="title_activity_surprise">Surprise</string>
    <string name="Height">Height</string>
    <string name="Width">Width</string>
    <string name="Greyscale">Greyscale</string>
    <string name="Go">Go</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

</resources>
