<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlaceKittenActivity" >

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/width"
        android:layout_below="@+id/width"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/textView1" >
    </RadioGroup>

    <EditText
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@+id/TextView02"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/height"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/Height" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/width"
        android:layout_alignBottom="@+id/width"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:text="@string/Width" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/height"
        android:layout_marginTop="56dp"
        android:text="@string/Greyscale" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/height"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="35dp"
        android:text="@string/Go" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/radioGroup1" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No" />
    </RadioGroup>

</RelativeLayout>